[tool.poetry]
name = "image-generation"
version = "0.1.0"
description = ""
authors = ["vincent <vclaes1986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.19.2"
dalle2-pytorch = "^0.5.6"
imagen-pytorch = "^0.0.47"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
